# pursuit

./: .gitignore  001_personal_learning_plan.txt  001_pursuit_notes.txt  002_pursuit_notes.txt  003_pursuit_notes.txt  005_pursuit_notes.txt  006_pursuit_notes.txt  007_builder_balls.py  007_pursuit_notes.txt  007_validate_email.py  008_pursuit_notes.txt  009_pursuit_notes.txt  README.md
008_tinderface/: prompt.txt  workflow.txt
builds/000_Ai-album-/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
builds/000_Ai-album-/src/: index.css
builds/001_lifting/: README.md  SETUP.md  package.json
builds/001_lifting/public/: index.html
builds/001_lifting/src/: index.html  index.tsx  react-index-html.html  workout-selector-app.tsx
builds/001_liftwise/: README.md  index.html  package-lock.json  tailwind.config.ts  vite.config.ts
builds/002_imp/: .env  .gitattributes  .gitignore  github_commands.txt  index.html  requirements.txt  runServer.py  test_api.py
builds/002_imp/app/: README.md  (+9 more)
builds/003_facegame/: .gitignore  README.md  changelog.md  data.json  game.js  index.html  styles.css
builds/004_data_extraction/: notes.md  test_extraction.py
builds/004_food_data_viz/: .gitignore  CHANGELOG.md  readme.md
builds/004_food_data_viz/docs/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
prompts/: ahkv2_prompt.txt  rules_for_good_prompt.txt
research/articles/: 000_article_to_podcast.txt
research/python_info/: What Can I Do With Python_ – Real Python.htm  What Is Python Used For_ A Beginner’s Guide _ Coursera.htm
(+85 files in other folders)
